# RobotSimulation

./: .gitignore  CMakeLists.txt  README.md  icon.rc  res.qrc
froms/: homewidget.ui  mainwindow.ui  robotcontrolwidget.ui
meshes/aubo_i5/: base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
meshes/ur5/: base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
resources/code_edit/code_samples/: robotsimulation.rs
resources/code_edit/languages/: rs.xml
resources/stl_files/ur10/: forearm.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
resources/stl_files/ur10 (copy)/: base.stl  forearm.stl  shoulder.stl  upperarm (copy).stl  upperarm.stl  upperarmtest.stl
src/: FluAEmptyPage.cpp  FluAEmptyPage.h  FluAEmptyPage2.cpp  FluAEmptyPage2.h  FluAEmptyPage3.cpp  FluAEmptyPage3.h  FluGalleryWindow.cpp  FluGalleryWindow.h  ddr6robotwidget.cpp  ddr6robotwidget.h  fpsgetter.cpp  fpsgetter.h  ikfast.h  kin.cpp  kin.h  main.cpp  mainwindow.cpp  mainwindow.h  robotcontrolwidget.cpp  robotcontrolwidget.h  robotkinematics.h  rrglwidget.cpp  rrglwidget.h  stlfileloader.cpp  stlfileloader.h
src/components/: FliListViewItem.cpp  FluAction.h  FluAmPmView.h  FluAppBarButton.h  FluAppBarToggleButton.h  FluAutoSuggestBox.h  FluBorder.h  FluCalendarDatePicker.h  FluCalendarDef.h  FluCalendarSelectDayView.cpp  FluCalendarSelectDayView.h  FluCalendarSelectMonthView.cpp  FluCalendarSelectMonthView.h  FluCalendarSelectYearView.cpp  FluCalendarSelectYearView.h  FluCalendarView.h  FluCalendarViewTitle.h  FluCheckBox.h  FluCodeBox.h  FluColorButton.h  FluColorFlyout.h  FluColorLabel.h  FluComboBox.h  FluComboBoxEx.h  FluComboBoxTextItem.h  FluConfirmFlyout.h  FluDatePickerView.h  FluDisplayBox.h  FluDisplayBoxEx.h  FluDisplayIconBox.h  FluDoubleSpinBox.h  FluDropDownButton.h  FluExpander.cpp  FluExpander.h  FluFWScrollView.h  FluFrameLessWidget.cpp  FluGraphicalButton.h  FluHCard.h  FluHFlipView.cpp  FluHFlipView.h  (+72 more)
src/components/fluwidgets/: FluAction.h  FluAmPmView.h  FluBorder.h  (+107 more)
src/tools/: codehelper.h  fpsgetter.cpp  fpsgetter.h  infobar.h  kin.cpp  kinematics.cpp  robotkinematics.h  stlfileloader.cpp
src/widgets/: codeeditwidget.cpp  codeeditwidget.h  controlwidget.cpp  controlwidget.h  ddr6robotwidget.cpp  ddr6robotwidget.h  homewidget.cpp  homewidget.h  osgwidget.cpp  osgwidget.h  robotcontrolwidget.cpp  robotcontrolwidget.h  robotsimulationwindow.cpp  robotsimulationwindow.h  rrglwidget.cpp  rrglwidget.h  rscodeeditwidget.cpp  rscodeeditwidget.h  settingwidget.cpp  settingwidget.h
stylesheet/dark/: CodeEditWidget.qss  FluCheckBox.qss  FluComboBox.qss  FluDoubleSpinBox.qss  FluLabel.qss  FluMenu.qss  FluProgressRingPage.qss  FluRadioButton.qss  FluRadioButtonPage.qss  FluSpinBox.qss  FluToggleSwitch.qss  FluVNavigationIconTextItem.qss  HomeWidget.qss  RobotSimulationWindow.qss  SettingWidget.qss
stylesheet/light/: CodeEditWidget.qss  FluCheckBox.qss  FluComboBox.qss  FluComboBoxPage.qss  FluDoubleSpinBox.qss  FluLabel.qss  FluMenu.qss  FluRadioButton.qss  FluSpinBox.qss  FluToggleSwitch.qss  FluVNavigationIconTextItem.qss  HomeWidget.qss  RobotSimulationWindow.qss  SettingWidget.qss
(+12 files in other folders)
